--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
     "motion": "^12.6.3",
-    "next": "14.0.1",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
